fix account selection dropdown being able to exceed page width on mobile

--- a/src/less/components/nav.less
+++ b/src/less/components/nav.less
@@ -295,7 +295,7 @@
 .accounts-dropdown {
 	position: absolute;
 	width: 30%;
-	min-width: 400px;
+	min-width: 300px;
 	max-width: 600px;
 	max-height: 400px;
 	border: 2px solid #FFF;
